tests/paczka1/small_fuzzy/82057063.err
Error in line 3: rDnk7sxyBdn S966 83,0
Error in line 5: rDnk7sxyBdn A852 14,3
